SubBt/force-app/main/default/objects/Schedule__c/Schedule__c.object-meta.xml
<CustomObject>
    <label>Schedule</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Schedule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>