SubBt/force-app/main/default/objects/Schedule__c/fields/Actual_Completion_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date_2__c</fullName>
    <formula>if(( Complete__c   =  1),  TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>