SubBt/force-app/main/default/objects/Schedule__c/fields/Actual_Start_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date_2__c</fullName>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>