SubBt/force-app/main/default/objects/Schedule__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arbor Meadows</fullName>
            </value>
            <value>
                <fullName>Falcon Ridge</fullName>
            </value>
            <value>
                <fullName>Stone Creek</fullName>
            </value>
            <value>
                <fullName>Waterfield</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>