SubBt/force-app/main/default/objects/Schedule__c/fields/Complete1__c.field-meta.xml
<CustomField>
    <fullName>Complete1__c</fullName>
    <label>Completion (%)</label>
    <summarizedField>Project_Task__c.Completion__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Task__c.Milestone__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>