SubBt/force-app/main/default/objects/Schedule__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <formula>/*buildertek__Completion2__c /  buildertek__Duration__c*/
 Total_Days_Completed__c /  Total_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>