SubBt/force-app/main/default/objects/Schedule__c/fields/Customer_Visible__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want your Customers to have visibility to this Schedule in their Customer Community.</inlineHelpText>
    <label>Customer Visible</label>
    <type>Checkbox</type>
</CustomField>