SubBt/force-app/main/default/objects/Schedule__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Actual date the Project was Completed.</inlineHelpText>
    <label>Actual Completion Date(R)</label>
    <summarizedField>Project_Task__c.Finish__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Schedule__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>