SubBt/force-app/main/default/objects/Schedule__c/fields/Gantt_Draw_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Gantt_Draw_Dependencies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gantt Draw Dependencies</label>
    <type>Checkbox</type>
</CustomField>