SubBt/force-app/main/default/objects/Schedule__c/fields/Gantt_Highlight_Non_Working_Time__c.field-meta.xml
<CustomField>
    <fullName>Gantt_Highlight_Non_Working_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gantt Highlight Non Working Time</label>
    <type>Checkbox</type>
</CustomField>