SubBt/force-app/main/default/objects/Schedule__c/fields/Gantt_Project_Lines__c.field-meta.xml
<CustomField>
    <fullName>Gantt_Project_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gantt Project Lines</label>
    <type>Checkbox</type>
</CustomField>