SubBt/force-app/main/default/objects/Schedule__c/fields/Gantt_Task_Labels__c.field-meta.xml
<CustomField>
    <fullName>Gantt_Task_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gantt Task Labels</label>
    <type>Checkbox</type>
</CustomField>