SubBt/force-app/main/default/objects/Schedule__c/fields/Hide_Gantt_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Hide_Gantt_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Gantt Schedule</label>
    <type>Checkbox</type>
</CustomField>