SubBt/force-app/main/default/objects/Schedule__c/fields/Initial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Start_Date__c</fullName>
    <label>Initial Start Date</label>
    <type>Date</type>
</CustomField>