SubBt/force-app/main/default/objects/Schedule__c/fields/IsMatch__c.field-meta.xml
<CustomField>
    <fullName>IsMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMatch</label>
    <type>Checkbox</type>
</CustomField>