SubBt/force-app/main/default/objects/Schedule__c/fields/Notify_Vendor_on_Schedule_Change__c.field-meta.xml
<CustomField>
    <fullName>Notify_Vendor_on_Schedule_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to notify your Vendor&apos;s with a schedule change.</inlineHelpText>
    <label>Notify Vendor on Schedule Changes</label>
    <type>Checkbox</type>
</CustomField>