SubBt/force-app/main/default/objects/Schedule__c/fields/Original_Dates_Filled__c.field-meta.xml
<CustomField>
    <fullName>Original_Dates_Filled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Dates Filled</label>
    <type>Checkbox</type>
</CustomField>