SubBt/force-app/main/default/objects/Schedule__c/fields/Original_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_End_Date__c</fullName>
    <inlineHelpText>The Original date the project was supposed to be completed.</inlineHelpText>
    <label>Original Completion Date</label>
    <type>Date</type>
</CustomField>