SubBt/force-app/main/default/objects/Schedule__c/fields/Original_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Start_Date__c</fullName>
    <inlineHelpText>The Original date the project was supposed to start.</inlineHelpText>
    <label>Original Start Date</label>
    <type>Date</type>
</CustomField>