SubBt/force-app/main/default/objects/Schedule__c/fields/Primary_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Primary_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this schedule is the primary schedule of the project.  This will drive the estimated completion date field on the project.</inlineHelpText>
    <label>Primary Schedule</label>
    <type>Checkbox</type>
</CustomField>