SubBt/force-app/main/default/objects/Schedule__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project Manager Associated with this Schedule.  By default the Project Manager from the Project is used, however you can change that at this Schedule level.</inlineHelpText>
    <label>Project Manager - Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>