SubBt/force-app/main/default/objects/Schedule__c/fields/Project_Managers__c.field-meta.xml
<CustomField>
    <fullName>Project_Managers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager - User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>