SubBt/force-app/main/default/objects/Schedule__c/fields/Release_To_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Release_To_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Vendor is scheduled to work on this task.</inlineHelpText>
    <label>Release To Vendor</label>
    <type>Checkbox</type>
</CustomField>