SubBt/force-app/main/default/objects/Schedule__c/fields/Schedule_Items_Count__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Items_Count__c</fullName>
    <label>Schedule Items Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>