SubBt/force-app/main/default/objects/Schedule__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Actual date the Project Started.</inlineHelpText>
    <label>Actual Start Date(R)</label>
    <summarizedField>Project_Task__c.Start__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Schedule__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>