SubBt/force-app/main/default/objects/Schedule__c/fields/Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Task_Count__c</fullName>
    <label>Number of Schedule Items</label>
    <summaryFilterItems>
        <field>Project_Task__c.Milestone__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>