SubBt/force-app/main/default/objects/Schedule__c/fields/Total_Days_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Completed__c</fullName>
    <label>Total Days Completed</label>
    <summarizedField>Project_Task__c.Days_Completed__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>