SubBt/force-app/main/default/objects/Schedule__c/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <inlineHelpText>Sum of Duration field for all Tasks.</inlineHelpText>
    <label>Total Working (Days)</label>
    <summarizedField>Project_Task__c.Duration__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>