SubBt/force-app/main/default/objects/Schedule__c/fields/Vendor_Match__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Match__c</fullName>
    <formula>IF( $User.Account_Id__c  ==  Project__r.Account__r.Id   , true,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Match</label>
    <type>Checkbox</type>
</CustomField>