SubBt/force-app/main/default/objects/Schedule__c/fields/Vendor_Visible__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked the Vendor&apos;s can see the schedule.</description>
    <inlineHelpText>Vendor&apos;s can see the schedule, but it is not approved for work.</inlineHelpText>
    <label>Vendor Visible</label>
    <type>Checkbox</type>
</CustomField>